# sisyphus-red

./: .gitignore  README.md  outputFile.txt
.cache/clangd/index/: __assert.h.0B68127FB8A88A1A.idx  addr.h.661364F08D481317.idx  addr_types.h.23C476AF50832708.idx  app_memdomain.h.BBAAEE7FD9D97A0B.idx  arch.h.6AA57364285551B7.idx  arch_inlines.h.7DFA4B05272EA6CF.idx  arch_inlines.h.AAE787C489580620.idx  arch_interface.h.16147749CAA13836.idx  arm_mpu.h.12A43774EB097599.idx  arm_mpu_v7m.h.ED05ABD1A721E72C.idx  asm_inline.h.9A659441729D1408.idx  asm_inline_gcc.h.45FFFE1B22C68B27.idx  assert.c.A4841528C9B34EFF.idx  assert.h.5DF4BDD916ACD536.idx  atomic.h.DD1E62B5266CBE64.idx  atomic_builtin.h.417A07E351E1211A.idx  atomic_types.h.A86CB0B1ED8D98C5.idx  barrier.h.858B33207624D5D7.idx  barrier.h.E6B56E9DD8DE80A9.idx  bluetooth.h.69B4C3D20E7B9525.idx  bt_ctlr_used_resources.h.54DCDB2EC0EB78A4.idx  buf_simple.c.31391433160A42D0.idx  byteorder.h.B670A75054036B46.idx  byteorder.h.EB2E0DEA4BA36AB6.idx  can.h.570390CE9D101833.idx  cbprintf.h.ECF3BE96F5A230CE.idx  cbprintf_cxx.h.82D818CFDADFEA1D.idx  cbprintf_enums.h.5A24BA9E75DF259B.idx  cbprintf_internal.h.54991A3637075AF5.idx  (+228 more)
mycode/apps/ultrasonic/: CMakeLists.txt  prj.conf
mycode/apps/ultrasonic/boards/: disco_l475_iot1.overlay  nrf52840dk_nrf52840.overlay  nucleo_l496zg.overlay
mycode/apps/ultrasonic/src/: main.c
mycode/include/: pathfinding.h  pqueue.h  process_packets.h  recieve.h  ultrasonic.h
mycode/mylib/: client.py  pathfinding  pathfinding.c  pqueue.c  process_packets.c  recieve.c  server.py  ultrasonic.c
(+38 files in other folders)
